SAK-52757 Calendar fix warning test